cambio y agrego validacion

--- a/tp3/index.html
+++ b/tp3/index.html
@@ -24,8 +24,8 @@
         <p class="dif">¿Con que dificultad te gustaría jugar?</p>
         <div class="buttons">
           <button id="easy" type = "button">Facil</button>
-          <button class="medium" type = "button">Intermedio</button>
-          <button class="expert" type = "button">Dificil</button>
+          <button id="medium" type = "button">Intermedio</button>
+          <button id="expert" type = "button">Dificil</button>
         </div>
         <p id="message-error"></p>
       </form>
