--- a/tp3/index.html
+++ b/tp3/index.html
@@ -41,9 +41,15 @@
         <p id="tries"></p>
     </div>
 
-    <div class="modal">
-      
+    <div class="modal-loser">
+      <div class="modal-content">  
+      </div>
+    </div> 
+    <div class="modal-winner">
+      <div class="modal-contentWinner">  
+      </div>
     </div>
+
     </div>
     
     <script src="index.js">
