iniciando local storage

--- a/tp3/index.html
+++ b/tp3/index.html
@@ -47,6 +47,9 @@
     </div> 
     <div class="modal-winner">
       <div class="modal-contentWinner">  
+          <div class="table-ranking">
+              <p id="parrafo"></p>
+          </div>
       </div>
     </div>
 
